--- a/app/partials/mapa.html
+++ b/app/partials/mapa.html
@@ -2,11 +2,20 @@
 
 <div class="mapContainer">
     <google-map center="map.center" zoom="map.zoom">
-        <marker coords='{-32.9377441,-60.6536844}'></marker>
+        <markers>
+            <marker ng-repeat="homicidio in homicidios" coords='homicidio.gps' icon="markerIcon.gun">
+                <window>
+                    <p>{{homicidio.resumen}}</p>
+                    <p>Comisaria: {{homicidio.comisaria}}</p>
+                </window>
+
+            </marker>
+
+        </markers>
 
     </google-map>
 </div>
 
 <blockquote>
-    Version {{ version }}
+    Version 0.5
 </blockquote>
