nuevos filtros y selectores para el mapa

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -3,4 +3,7 @@ body { padding-top: 70px; }
 
 .angular-google-map-container { height: 400px; }
 
-.container {width:900px}
+
+#comisaria {
+    height: 280px;
+}
