--- a/app/partials/mapa.html
+++ b/app/partials/mapa.html
@@ -1,10 +1,10 @@
 <h1>Mapa de Homicidios de Rosario 2013/14</h1>
 <div class="row">
-    <div class="col-lg-10">
+    <div class="col-xs-9">
         <div class="mapContainer">
             <google-map center="map.center" zoom="map.zoom">
                 <markers>
-                    <marker ng-repeat="homicidio in homicidios | filter: filt" coords='homicidio.gps' icon="markerIcon.gun">
+                    <marker ng-repeat="homicidio in homicidios | filter: filterByTipo | filter: filterByComisaria " coords='homicidio.gps' icon="markerIcon.gun">
                         <window>
                             <p>{{homicidio.resumen}}</p>
                             <p>Comisaria: {{homicidio.comisaria}}</p>
@@ -17,12 +17,12 @@
             </google-map>
         </div>
     </div>
-    <div class="col-lg-2">
+    <div class="col-xs-3">
         <fieldset>
             <h5>Filtros</h5>
             <div class="form-group">
                 <label for="comisaria">Comisaria</label>
-                <select ng-model="filt.comisaria" class="form-control" id="comisaria" name="comisaria" >
+                <select ng-model="filt.comisaria" multiple="multiple" class="form-control" id="comisaria" name="comisaria" >
                         <option value="">Todas</option>
                         <option value="1">Seccional 1°</option>
                         <option value="2">Seccional 2°</option>
@@ -76,8 +76,3 @@
 
 
 </div>
-
-
-<blockquote>
-    Version 0.5
-</blockquote>
